<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scchildcare_logo" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button1"
            android:contentDescription="@string/GPSDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gps"
            android:gravity="center"
            android:onClick="getLocation"
            android:text="@string/button_locate" />

        <ImageButton
            android:layout_width="wrap_content"
            android:contentDescription="@string/searchDesc"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/search"
            android:onClick="sendMessage"
            android:text="@string/button_search" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- <TextView -->
        <!-- android:id="@+id/label_lat_lng" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="@string/latlng1" -->
        <!-- android:textSize="20sp" /> -->


        <!-- <TextView -->
        <!-- android:id="@+id/geocodeLabel" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:textSize="20sp" /> -->

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center" />

        <!-- <TextView -->
        <!-- android:id="@+id/lat_lng" -->
        <!-- android:layout_width="87dp" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginBottom="18dp" -->
        <!-- android:textIsSelectable="true" -->
        <!-- android:textSize="0sp" /> -->
    </LinearLayout>

</LinearLayout>